--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   },
   "homepage": "https://github.com/miigangls/asisoy-rest-api#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1", 
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.7"
   }
 }
